
  o Added lrvar = FALSE argument to efp() so that optionally a long-run variance
    estimator (Andrews or Newey-West) instead of the standard OLS estimator can
    be used for the error variance.

  o Added vcov. = NULL argument to efp() so that optionally other covariance
    matrix estimators can be plugged into RE and ME tests (e.g., sandwich(),
    kernHAC(), NeweyWest(), etc.).


Changes in Version 1.5-1

  o ordL2BB() now uses a direct simulation method based on mvtnorm::rmvnorm()
    which is much faster, making the computation of p values and critical values
    for the ordinal maxLM statistic much faster and feasible "on the fly".

  o Reduced number of significant digits in breakpoints summary to
    getOption("digits") - 3.

  o Reference output updated for recent versions of R.


Changes in Version 1.5-0

  o Added new efpFunctional generators for conducting various types of
    structural change tests based on empirical fluctuation processes of class
    "gefp". In particular a (maximum) MOSUM functional was added as well
    as several functionals suitable for aggregation along categorical
    variables. The documentation for previously available functionals
    such as supLM() was also enhanced.
    
  o The new functionals mentioned above for assessing parameter instability
    along (ordered) categorical variables are catL2BB (unordered),
    ordL2BB and ordwmax (ordered). These are discussed in more detail in
    Merkle, Fan, and Zeileis (2013, Psychometrika).
    
  o Added a new default method for sctest(). This essentially just calls
    gefp(object, fit = NULL) and then (optionally) calls plot() and sctest()
    using the specified functional. However, several convenience options have
    been added, e.g., using the maximum likelihood information (rather than
    the outer product of gradients) for the covariance matrix or specifying
    the functional via a character string.
