@@ -1,6 +1,6 @@
 Package: strucchange
 Version: 1.5-2
-Date: 2015-06-06
+Date: 2016-01-13
 Title: Testing, Monitoring, and Dating Structural Changes
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Friedrich", family = "Leisch", role = "aut", email = "Friedrich.Leisch@R-project.org"),
