@@ -56,7 +56,7 @@ breakpoints.formula <- function(formula, h = 0.15, breaks = NULL,
     ssr <- if(intercept_only) {
       (y[i:n] - cumsum(y[i:n])/(1L:(n-i+1L)))[-1L] * sqrt(1L + 1L/(1L:(n-i)))
     } else {
-      recresid(X[i:n,,drop = FALSE],y[i:n])
+      recresid(X[i:n,,drop = FALSE],y[i:n], ...)
     }
     c(rep(NA, k), cumsum(ssr^2))
   }
