@@ -22,7 +22,7 @@ recresid.lm <- function(x, data = list(), ...)
 }
 
 recresid.default <- function(x, y, start = ncol(x) + 1, end = nrow(x),
-  tol = sqrt(.Machine$double.eps)/ncol(x), ...)
+  tol = sqrt(.Machine$double.eps)/ncol(x), qr.tol = 1e-7, ...)
 {
   ## checks and data dimensions
   stopifnot(start > ncol(x) & start <= nrow(x))
@@ -47,7 +47,7 @@ recresid.default <- function(x, y, start = ncol(x) + 1, end = nrow(x),
 
   ## initialize recursion
   y1 <- y[1:q]
-  fm <- lm.fit(x[1:q, , drop = FALSE], y1)
+  fm <- lm.fit(x[1:q, , drop = FALSE], y1, tol = qr.tol, ...)
   X1 <- Xinv0(fm)	 
   betar <- coef0(fm)
   xr <- as.vector(x[q+1,])
@@ -71,7 +71,7 @@ recresid.default <- function(x, y, start = ncol(x) + 1, end = nrow(x),
 	## full QR decomposition
 	if(check) {
 	  y1 <- y[1:(r-1)]
-	  fm <- lm.fit(x[1:(r-1), , drop = FALSE], y1)
+	  fm <- lm.fit(x[1:(r-1), , drop = FALSE], y1, tol = qr.tol, ...)
 	  nona <- nona & all(!is.na(betar)) & all(!is.na(fm$coefficients))
 	  ## keep checking?
 	  if(nona && isTRUE(all.equal(as.vector(fm$coefficients), as.vector(betar), tol = tol))) check <- FALSE 
